RESOLVED FIXED67279
[Chromium] Web Inspector: dedicated worker inspection is broken
https://bugs.webkit.org/show_bug.cgi?id=67279
Summary [Chromium] Web Inspector: dedicated worker inspection is broken
Yury Semikhatsky
Reported 2011-08-31 04:45:54 PDT
Native inspection of dedicated worker is broken in Chromium. This is likely because of moving dedicated workers in page renderer process.
Attachments
Patch (8.93 KB, patch)
2011-08-31 23:48 PDT, Yury Semikhatsky
no flags
Patch (10.16 KB, patch)
2011-09-01 00:41 PDT, Yury Semikhatsky
no flags
Patch (10.80 KB, patch)
2011-09-01 01:03 PDT, Yury Semikhatsky
pfeldman: review+
Yury Semikhatsky
Comment 1 2011-08-31 23:48:10 PDT
WebKit Review Bot
Comment 2 2011-08-31 23:57:14 PDT
Early Warning System Bot
Comment 3 2011-09-01 00:07:09 PDT
Yury Semikhatsky
Comment 4 2011-09-01 00:41:42 PDT
Yury Semikhatsky
Comment 5 2011-09-01 01:03:25 PDT
Yury Semikhatsky
Comment 6 2011-09-01 10:35:36 PDT
Note You need to log in before you can comment on or make changes to this bug.