Source/WebCore/workers/WorkerMessagingProxy.cpp
@@ -43,6 +43,8 @@
 #include "ScriptCallStack.h"
 #include "ScriptExecutionContext.h"
 #include "Worker.h"
+#include "WorkerInspectorController.h"
+#include "WorkerScriptDebugServer.h"
 #include <wtf/MainThread.h>
 
 namespace WebCore {
@@ -209,6 +211,30 @@ private:
     bool m_hasPendingActivity;
 };
 
+class PostMessageToPageInspectorTask : public ScriptExecutionContext::Task {
+public:
+    static PassOwnPtr<PostMessageToPageInspectorTask> create(WorkerMessagingProxy* messagingProxy, const String& message)
+    {
+        return adoptPtr(new PostMessageToPageInspectorTask(messagingProxy, message));
+    }
+
+private:
+    PostMessageToPageInspectorTask(WorkerMessagingProxy* messagingProxy, const String& message)
+        : m_messagingProxy(messagingProxy)
+        , m_message(message.crossThreadString())
+    {
+    }
+
+    virtual void performTask(ScriptExecutionContext*)
+    {
+        if (WorkerContextProxy::PageInspector* pageInspector = m_messagingProxy->m_pageInspector)
+            pageInspector->dispatchMessageFromWorker(m_message);
+    }
+
+    WorkerMessagingProxy* m_messagingProxy;
+    String m_message;
+};
+
 
 #if !PLATFORM(CHROMIUM)
 WorkerContextProxy* WorkerContextProxy::create(Worker* worker)
@@ -223,6 +249,9 @@ WorkerMessagingProxy::WorkerMessagingProxy(Worker* workerObject)
     , m_unconfirmedMessageCount(0)
     , m_workerThreadHadPendingActivity(false)
     , m_askedToTerminate(false)
+#if ENABLE(INSPECTOR)
+    , m_pageInspector(0)
+#endif
 {
     ASSERT(m_workerObject);
     ASSERT((m_scriptExecutionContext->isDocument() && isMainThread())
@@ -323,6 +352,50 @@ void WorkerMessagingProxy::workerObjectDestroyed()
         workerContextDestroyedInternal();
 }
 
+#if ENABLE(INSPECTOR)
+static void connectToWorkerContextInspectorTask(ScriptExecutionContext* context, bool)
+{
+    ASSERT(context->isWorkerContext());
+    static_cast<WorkerContext*>(context)->workerInspectorController()->connectFrontend();
+}
+
+void WorkerMessagingProxy::connectToInspector(WorkerContextProxy::PageInspector* pageInspector)
+{
+    if (m_askedToTerminate)
+        return;
+    ASSERT(!m_pageInspector);
+    m_pageInspector = pageInspector;
+    m_workerThread->runLoop().postTask(createCallbackTask(connectToWorkerContextInspectorTask, true));
+}
+
+static void disconnectFromWorkerContextInspectorTask(ScriptExecutionContext* context, bool)
+{
+    ASSERT(context->isWorkerContext());
+    static_cast<WorkerContext*>(context)->workerInspectorController()->disconnectFrontend();
+}
+
+void WorkerMessagingProxy::disconnectFromInspector()
+{
+    m_pageInspector = 0;
+    if (m_askedToTerminate)
+        return;
+    m_workerThread->runLoop().postTaskForMode(createCallbackTask(disconnectFromWorkerContextInspectorTask, true), WorkerScriptDebugServer::debuggerTaskMode);
+}
+
+static void dispatchOnInspectorBackendTask(ScriptExecutionContext* context, const String& message)
+{
+    ASSERT(context->isWorkerContext());
+    static_cast<WorkerContext*>(context)->workerInspectorController()->dispatchMessageFromFrontend(message);
+}
+
+void WorkerMessagingProxy::sendMessageToInspector(const String& message)
+{
+    if (m_askedToTerminate)
+        return;
+    m_workerThread->runLoop().postTaskForMode(createCallbackTask(dispatchOnInspectorBackendTask, String(message)), WorkerScriptDebugServer::debuggerTaskMode);
+}
+#endif
+
 void WorkerMessagingProxy::workerContextDestroyed()
 {
     m_scriptExecutionContext->postTask(WorkerContextDestroyedTask::create(this));
@@ -361,8 +434,9 @@ void WorkerMessagingProxy::terminateWorkerContext()
 }
 
 #if ENABLE(INSPECTOR)
-void WorkerMessagingProxy::postMessageToPageInspector(const String&)
+void WorkerMessagingProxy::postMessageToPageInspector(const String& message)
 {
+    m_scriptExecutionContext->postTask(PostMessageToPageInspectorTask::create(this, message));
 }
 #endif
 
